--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
